--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -4,13 +4,12 @@
 /node_modules
 /.pnp
 .pnp.js
-venv
 
 # testing
 /coverage
 
 # production
-/build
+#/build
 
 # misc
 .DS_Store
@@ -18,7 +17,6 @@ venv
 .env.development.local
 .env.test.local
 .env.production.local
-__pycache__
 
 npm-debug.log*
 yarn-debug.log*
