--- a/requirements.txt
+++ b/requirements.txt
@@ -14,10 +14,16 @@ itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.5
 mysqlclient==2.2.4
+numpy==1.24.4
 packaging==24.0
+pandas==2.0.3
 PyJWT==2.8.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+pytz==2024.1
+six==1.16.0
 SQLAlchemy==2.0.28
 typing_extensions==4.10.0
+tzdata==2024.1
 Werkzeug==3.0.1
 zipp==3.18.1
