--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,9 @@ itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.5
 mysqlclient==2.2.4
+numpy==1.26.4
 packaging==24.0
-pandas==2.0.3
+pandas==2.2.0
 PyJWT==2.8.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
